--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="black">#FFFFFF</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <!-- Color Background -->
+    <color name="background_1">#E80C0C</color>
+    <color name="background_2">#FFEB3B</color>
+    <color name="background_3">#2C04DC</color>
+    <color name="background_4">#009688</color>
+
+
+    <!-- Color dots -->
+    <color name="dots_1">#FFC5C5</color>
+    <color name="dots_2">#FFFCDD</color>
+    <color name="dots_3">#8C76EC</color>
+    <color name="dots_4">#557E7A</color>
+
+
+    <array name="array_background">
+        <item>@color/background_1</item>
+        <item>@color/background_2</item>
+        <item>@color/background_3</item>
+        <item>@color/background_4</item>
+    </array>
+
+    <array name="array_dots">
+        <item>@color/dots_1</item>
+        <item>@color/dots_2</item>
+        <item>@color/dots_3</item>
+        <item>@color/dots_4</item>
+    </array>
+
 </resources>
