--- a/app/src/main/res/layout/place_card_view.xml
+++ b/app/src/main/res/layout/place_card_view.xml
@@ -5,6 +5,8 @@
     android:id="@+id/cv_place"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginBottom="8dp"
     android:clickable="true"
     android:focusable="true"
     app:cardElevation="30dp"
