--- a/app/src/main/res/layout/activity_form_place.xml
+++ b/app/src/main/res/layout/activity_form_place.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#C8DFEA"
-    tools:context=".MainActivity">
+    tools:context=".views.MainActivity">
 
     <ImageView
         android:id="@+id/imageView"
