--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".ListViewActivity">
+        tools:context=".views.ListViewActivity">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_places"
