--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    tools:context=".MapsActivity">
+    tools:context=".views.MapsActivity">
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
