--- a/app/src/main/res/drawable/ic_list_places.xml
+++ b/app/src/main/res/drawable/ic_list_places.xml
@@ -1,8 +1,8 @@
-<!-- drawable/menu.xml -->
+<!-- drawable/format_list_text.xml -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:height="24dp"
     android:width="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-    <path android:fillColor="#FFF" android:pathData="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
+    <path android:fillColor="#000" android:pathData="M2 14H8V20H2M16 8H10V10H16M2 10H8V4H2M10 4V6H22V4M10 20H16V18H10M10 16H22V14H10" />
 </vector>
