--- a/app/src/main/res/layout/activity_form_place.xml
+++ b/app/src/main/res/layout/activity_form_place.xml
@@ -30,15 +30,15 @@
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="132dp"
-        android:layout_height="28dp"
+        android:id="@+id/tv_nombreLugar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:contentDescription="@string/app_name"
         android:text="UKUMARI"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textColor="#121111"
-        android:textSize="20sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -46,17 +46,17 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="187dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="32dp"
+        android:id="@+id/tv_descLugar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="Bioparque Tematico"
-        android:textAlignment="center"
+        android:gravity="center"
         android:textColor="#101010"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_nombreLugar" />
 
     <ImageView
         android:id="@+id/imageView2"
@@ -82,7 +82,7 @@
         android:inputType="textPersonName"
         android:textColor="#131313"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_descLugar" />
 
     <ImageView
         android:id="@+id/imageView3"
