--- a/app/src/main/res/layout/place_card_view.xml
+++ b/app/src/main/res/layout/place_card_view.xml
@@ -5,12 +5,13 @@
     android:id="@+id/cv_place"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="4dp"
     android:layout_marginHorizontal="8dp"
     android:layout_marginVertical="4dp"
     android:clickable="true"
     android:focusable="true"
     app:cardElevation="30dp"
-    app:cardCornerRadius="10dp" >
+    app:cardCornerRadius="15dp" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,10 +50,11 @@
                 android:textStyle="italic"
                 tools:text="@string/default_place_description" />
 
-            <com.google.android.material.divider.MaterialDivider
+            <!--<com.google.android.material.divider.MaterialDivider
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
-                android:layout_marginTop="8dp" />
+                android:layout_marginTop="8dp" />-->
+
         </LinearLayout>
 
     </LinearLayout>
