--- a/app/src/main/res/layout/activity_list_view.xml
+++ b/app/src/main/res/layout/activity_list_view.xml
@@ -23,6 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/purple_500"
+                android:onClick="loadDefaultPlacesOnDB"
                 app:navigationIconTint="@color/white"
                 app:navigationIcon="@drawable/ic_list_places"
                 app:title="Mis lugares - Lista" />
