--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,16 +15,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="-1dp">
 
-        <TextView
-            android:id="@+id/Title_Regist"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="PAPPSEANDO"
-            android:gravity="center"
-            android:textColor="#FDFCFC"
-            android:textSize="34sp"
-            android:textStyle="bold" />
-
     </LinearLayout>
 
     <EditText
@@ -83,8 +73,8 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/Name_Registration"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.436"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintVertical_bias="0.722"
+        tools:layout_editor_absoluteX="85dp" />
 
     <TextView
         android:id="@+id/tv_registrarse"
@@ -99,6 +89,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_inicio"
         app:layout_constraintVertical_bias="0.298" />
+
+    <TextView
+        android:id="@+id/Title_Regist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="PAPPSEANDO"
+        android:textColor="#FDFCFC"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="53dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
