--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_700">#2ab6b9</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -11,11 +11,19 @@
 
 
     <!-- Color Background -->
-    <color name="background_1">#E80C0C</color>
-    <color name="background_2">#FFEB3B</color>
-    <color name="background_3">#2C04DC</color>
-    <color name="background_4">#009688</color>
+    <color name="background_1">#F78779</color>
+    <color name="background_2">#FFBC54</color>
+    <color name="background_3">#79F3F7</color>
+    <color name="background_4">#7985F7</color>
 
+
+    <!-- Paleta de colores -->
+    <color name="primario">#2ab6b9</color>
+    <color name="secumdario">#fdc846</color>
+    <color name="color1">#7985f7</color>
+    <color name="color2">#f78779</color>
+    <color name="color3">#ffbc54</color>
+    <color name="color4">#79f3f7</color>
 
     <!-- Color dots -->
     <color name="dots_1">#FFC5C5</color>
