Diseño aplicado a todos loz activities

--- a/app/src/main/res/layout/activity_form_place.xml
+++ b/app/src/main/res/layout/activity_form_place.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#C8DFEA"
+    android:background="#2ab6b9"
     tools:context=".views.MainActivity">
 
     <ImageView
@@ -21,23 +21,25 @@
         android:id="@+id/btnCamara"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="#0E0E0E"
+        android:background="@color/secundario"
         android:contentDescription="@string/app_name"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_camera" />
 
     <TextView
         android:id="@+id/tv_nombreLugar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
         android:contentDescription="@string/app_name"
-        android:text="UKUMARI"
         android:gravity="center"
-        android:textColor="#121111"
+        android:text="UKUMARI"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,12 +49,13 @@
 
     <TextView
         android:id="@+id/tv_descLugar"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Bioparque Tematico"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:gravity="center"
-        android:textColor="#101010"
+        android:text="Bioparque Tematico"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,8 +65,10 @@
         android:id="@+id/imageView2"
         android:layout_width="46dp"
         android:layout_height="42dp"
-        android:background="#3F51B5"
+        android:background="@color/secundario"
 
+        android:padding="3dp"
+        android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/Nombre"
         app:layout_constraintEnd_toStartOf="@+id/Nombre"
         app:layout_constraintStart_toStartOf="parent"
@@ -74,13 +79,14 @@
         android:id="@+id/Nombre"
         android:layout_width="240dp"
         android:layout_height="48dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="48dp"
-        android:background="#B1BDC6"
+        android:backgroundTint="#FFFFFF"
         android:ems="10"
         android:hint="Nombre del Lugar"
         android:inputType="textPersonName"
-        android:textColor="#131313"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_descLugar" />
 
@@ -88,7 +94,9 @@
         android:id="@+id/imageView3"
         android:layout_width="46dp"
         android:layout_height="42dp"
-        android:background="#3F51B5"
+        android:background="@color/secundario"
+        android:padding="3dp"
+        android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName3"
         app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName3"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,13 +107,14 @@
         android:id="@+id/editTextTextPersonName3"
         android:layout_width="240dp"
         android:layout_height="48dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="48dp"
-        android:background="#B1BDC6"
+        android:backgroundTint="#FFFFFF"
         android:ems="10"
         android:hint="Ubicacion / Coordenadas"
         android:inputType="textPersonName"
         android:textColor="#100F0F"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Nombre" />
 
@@ -114,7 +123,9 @@
         android:layout_width="46dp"
         android:layout_height="42dp"
         android:layout_marginStart="36dp"
-        android:background="#3F51B5"
+        android:background="@color/secundario"
+        android:padding="3dp"
+        android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName4"
         app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName4"
         app:layout_constraintHorizontal_bias="0.073"
@@ -127,27 +138,28 @@
         android:id="@+id/editTextTextPersonName4"
         android:layout_width="240dp"
         android:layout_height="48dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="48dp"
-        android:background="#B1BDC6"
+        android:backgroundTint="#FFFFFF"
         android:ems="10"
         android:hint="Descripcion"
         android:inputType="textPersonName"
         android:textColor="#100E0E"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
         tools:ignore="TouchTargetSizeCheck" />
 
-    <ImageButton
+    <Button
         android:id="@+id/btnGuardar"
-        android:layout_width="49dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="24dp"
-        android:background="#009688"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:text="Guardar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4"
-        app:srcCompat="@android:drawable/ic_menu_save"
-        tools:ignore="SpeakableTextPresentCheck" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
