--- a/app/src/main/res/layout/place_card_view.xml
+++ b/app/src/main/res/layout/place_card_view.xml
@@ -11,18 +11,21 @@
     android:clickable="true"
     android:focusable="true"
     app:cardElevation="30dp"
-    app:cardCornerRadius="15dp" >
+    app:cardCornerRadius="15dp"
+    app:cardBackgroundColor="@android:color/transparent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="8dp">
+        android:background="#2AB6B9"
+        android:elevation="1dp"
+        android:padding="12dp">
 
         <ImageView
             android:id="@+id/iv_place_image"
             android:layout_width="64dp"
             android:layout_height="64dp"
+            android:elevation="53dp"
             android:src="@android:drawable/ic_menu_gallery" />
 
         <LinearLayout
@@ -36,9 +39,11 @@
                 android:id="@+id/tv_place_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textColorHighlight="#FFFFFF"
+                android:textColorLink="#FFFFFF"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:textColor="@color/material_on_background_emphasis_high_type"
                 tools:text="@string/default_place_name" />
 
             <TextView
@@ -46,14 +51,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:textColor="#FFFFFF"
                 android:textSize="12sp"
                 android:textStyle="italic"
                 tools:text="@string/default_place_description" />
 
-            <!--<com.google.android.material.divider.MaterialDivider
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginTop="8dp" />-->
 
         </LinearLayout>
 
